--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
+<link rel="stylesheet" type="text/css" href="stylesheet.css" />
 <html>
   <body>
-    <h1>Hello</h1>
-    <script src="main.js"></script>
+    <h1>Hello, this is a wordcount extension</h1>
+    <script src="/scripts/main.js"></script>
   </body>
 </html>
