--- a/test.html
+++ b/test.html
@@ -1,7 +1,12 @@
 <link rel="stylesheet" type="text/css" href="stylesheet.css" />
 <html>
   <body>
-    <h1>Hello, this is a wordcount extension</h1>
+    <p>Settings</p>
+    <div id="settings-body">
+      <p id="settings-list">settings 1</p>
+      <p id="settings-list">settings 1</p>
+      <p id="settings-list">settings 1</p>
+    </div>
     <script src="/scripts/main.js"></script>
   </body>
 </html>
