--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,15 @@
 <link rel="stylesheet" type="text/css" href="stylesheet.css" />
 <html>
   <body>
-    <p>Settings</p>
+    <!--<p>Settings</p>
     <div id="settings-body">
       <p id="settings-list">settings 1</p>
       <p id="settings-list">settings 1</p>
       <p id="settings-list">settings 1</p>
-    </div>
+    </div>-->
+    <h1>A wordcounter extension</h1>
+    <p>By Caelan G</p>
+    <p>Has access to active tab</p>
     <script src="/scripts/main.js"></script>
   </body>
 </html>
